https://blog.csdn.net/qingshuiwater/article/details/82468758
1.更换jdk自带的encoder和edcoder